9.2.18.alpha.2 - 1st July 2022
- Fixed a compatibility issue with World Quest Tracker addon and the 'Unlock map frame' setting in Leatrix Maps.

9.2.16 - 22nd June 2022
- In the game key bindings menu, you can now set a keybind to toggle Leatrix Maps.

9.2.13 - 1st June 2022
- Updated for game version 9.2.5.

9.2.06 - 13th April 2022
- Added a new setting 'Use default map'.  If enabled, the full-screen map will be used for the maximised map.

9.2.04 - 30th March 2022
- For developers, you can now configure Leatrix Maps from your own addon or script using the following as a guide:

-- Ensure Leatrix Maps does not replace LeaMapsDB on next reload
SlashCmdList["Leatrix_Maps"]("nosave")
-- Clear the settings database (optional but recommended)
wipe(LeaMapsDB)
-- Configure the settings (add any settings you like here)
LeaMapsDB["NoMapBorder"] = "On"
-- Reload the UI to apply the settings
ReloadUI()

9.2.03 - 23rd March 2022
- For 'Enhance dungeon icons', added icons for 'Synthesis Forge', 'Protoform Repository' and 'Exile's Hollow' to the Zereth Mortis map.

9.2.00 - 23rd February 2022
- Updated for game version 9.2.0.

9.1.44 - 9th February 2022
- For 'Center map on player', releasing shift (after holding it down to prevent the map from centering) will no longer cause the map to center.  Centering will only will start again when you do something that requires a map update without shift being held down.  This includes zooming, panning, clicking an area of the map that isn't a button, toggling the map, etc.  This applies to both the world map and battleground map.

9.1.39 - 19th January 2022
- The 'Show unexplored areas' option now applies to Torghast too.
- Added a raid icon for Sepulcher of the First Ones (PTR).

9.1.36 - 29th December 2021
- Added additional map reveal data for The Maw.  Many thanks to zeenk for reporting that it was missing.
- For 'Enhance dungeon icons', the Flayedwing Transporter will now be shown on the Korthia map.

9.1.31 - 16th December 2021